add label for input

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <div>
-      <nav class="wrapper">
+      <nav class="wrapper" role="navigation">
         <img
           src="./images/logo.svg"
           alt=""
         /><a href="/">Try it Free</a>
       </nav>
-      <header class="wrapper">
+      <header class="wrapper" role="banner">
         <h1>Build The Community Your Fans Will Love</h1>
         <p class="wrapper-narrow">
           Huddle re-imagines the way we build communities. You have a voice, but
@@ -24,7 +24,7 @@
         </p>
         <a href="/">Get Started For Free</a>
       </header>
-      <div class="main-image wrapper">
+      <div class="main-image wrapper" role="article">
         <img
           src="./images/screen-mockups.svg"
           alt=""
@@ -177,6 +177,7 @@
           </p>
           <form class="input" id="input-form">
             <div>
+              <label for="email-input"></label>
               <input type="email" id="email-input" style="border: 2px solid"/>
               <div style="color: rgb(255, 66, 66)" id="email-message"></div>
             </div>
